--- a/src/components/css/ManageHabit.css
+++ b/src/components/css/ManageHabit.css
@@ -6,6 +6,7 @@
   display: flex;
   /* justify-content: center; */
   /* width: 100%; */
+  white-space: nowrap;
 }
 
 .manage-habit-wrapper .manage-habit-ctn {
@@ -28,10 +29,10 @@
 
 .manage-habit-ctn .name {
   /* width: 245px; */
-  margin: 0 0 0 10px;
+  margin: 0 10px;
   color: #D87B92;
   font-size: 2rem;
-  overflow: scroll;
+  overflow: hidden;
   /* border: 1px solid orange; */
 }
 
